# lab_robot_ws

./: README.md
src/abu_core/: package.xml  setup.cfg  setup.py
src/abu_core/abu_core/: joy_drive.py
src/abu_core/config/: config.yaml  params.yaml
src/abu_core/launch/: joy.launch.py
src/abu_description/: CMakeLists.txt  package.xml
src/abu_description/config/: controllers.yaml  ekf.yaml  navigation.yaml  neo_navigation.yaml  slam.yaml
src/abu_description/launch/: description.launch.py  gazebo.launch.py  moveit.launch.py  navigation.launch.py  rtabmap.launch.py  slam.launch.py
src/abu_description/maps/: blue_team.pgm  blue_team.yaml  map.pgm  map.yaml  red_team.pgm  red_team.yaml
src/abu_description/rviz/: description.rviz  navigation.rviz  rtabmap.rviz  slam.rviz
src/abu_description/src/: gripper_collision.py  gripper_control_left.py  gripper_control_right.py  nav2_control.py  seed_detection.py  swerve_drive_control.py  teleop_twist_keyboard.py
src/abu_description/urdf/: base.urdf.xacro  drive.urdf.xacro  properties.urdf.xacro  robot.urdf.xacro  robot_control.urdf.xacro
src/abu_description/worlds/: abu2024_blue.world  abu2024_no_model.world  abu2024_red.world  abu2024_seed_blue.world  abu2024_seed_red.world  abu2024_world.world
src/abu_moveit/: CMakeLists.txt  package.xml
src/abu_moveit/launch/: pick_place_demo.launch.py
src/abu_moveit/src/: hello_moveit.cpp  mtc_tutorial.cpp
src/abu_moveit_config/: CMakeLists.txt  package.xml
src/abu_moveit_config/config/: abu_bot.ros2_control.xacro  abu_bot.srdf  abu_bot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  (+2 more)
src/pymoveit2/: CMakeLists.txt
(+52 files in other folders)
